[package]
name = "rpg-chat-command-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = ["Khomenko Maksym"]
description = "A command line parser for RPG-like chat commands. Processes commands such as '/heal Player1', '/equip sword', or '/party invite Player2', validates their structure, and produces structured output for integration into games."

[dependencies]
