[package]
name = "rpg-chat-command-parser"
version = "0.1.0"
authors = ["Khomenko Maksym maximus.khomenko@gmail.com"]
description = "A command line parser for RPG-like chat commands. Processes commands such as '/heal Player1', '/equip sword', or '/party invite Player2', validates their structure, and produces structured output for integration into games."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Emril44/rpg-chat-command-parser"
homepage = "https://github.com/Emril44/rpg-chat-command-parser"
keywords = ["rpg", "parser", "chat-commands"]
categories = ["command-line-utilities", "parsing"]
edition = "2021"

include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "src/**",
    "tests/**"
]


[package.metadata.docs.rs]
all-features = true

[dependencies]
pest = "2.1"
pest_derive = "2.1"

clap = { version = "4.0", features = ["derive"] }

thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_matches = "1.5" # Optional for more expressive test assertions